src-tauri/src/snapshots/block_notes_lib__op_log__tests__snapshot_op_record_after_create_block.snap
---
source: src/op_log.rs
assertion_line: 792
expression: record
---
device_id: test-device
seq: 1
parent_seqs: ~
hash: "[HASH]"
op_type: create_block
payload: "{\"block_id\":\"BLK-SNAP\",\"block_type\":\"content\",\"parent_id\":null,\"position\":1,\"content\":\"test\"}"
created_at: "2025-01-15T12:00:00+00:00"
